tests/security/taintedFunctionWithNoTypes/output.txt
ERROR: TaintedData - input.hack:5:6 - Data from a URL query string found its way to an HTML tag